# labs4

./: .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  README.md
include/: BrokerResolver.h  Cli.h  Experiment.h  HardwareData.h  Stack.h  StackAbstract.h  StackException.h  StackNotCopyable.h  header.hpp
scripts/: checks.sh  configurate.sh
sources/: BrokerResolver.cpp  Cli.cpp  Experiment.cpp  main.cpp  source.cpp
tests/: test.cpp
